# jarokelo_tracker

./: .gitignore  Makefile  README.md  fix_workflow.sh  jarokelo.bat  pyproject.toml  requirements-scraper.txt  test_optimizations.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: actions_auto_bump.yml  aggregate_embedding_results.yml  aggregate_retrieval_reports.yml  automated_data_preprocessing.yml  data_pipeline.yml  debug-jsonl.yml  dependabot_automerge.yml  eval_pipeline.yml  full_data_pipeline.yml  scraper.yml  scraper_old.yml  test_makefile_bat_consistency.yml  update_gh_page.yml
benchmark_results/: step1_current.md  step2_no_new_tab.md  step3_headless-new.md  step4_all-options.md  step5_no-options.md  step6_multiproc.md  step7_multiproc-8workers.md
data/entries/: 2025-09.jsonl
data/processed/: issues_chunks.jsonl
data/raw/: .file_meta.cache  .url_index.cache  2023-11.jsonl  2023-12.jsonl  2024-01.jsonl  2024-02.jsonl  2024-03.jsonl  2024-04.jsonl  2024-05.jsonl  2024-06.jsonl  2024-07.jsonl  2024-08.jsonl  2024-09.jsonl  2024-10.jsonl  2024-11.jsonl  2024-12.jsonl  2025-01.jsonl  2025-02.jsonl  2025-03.jsonl  2025-04.jsonl  2025-05.jsonl  2025-06.jsonl  2025-07.jsonl  2025-08.jsonl  2025-09.jsonl  2025-10.jsonl  authority_response_sample.jsonl  eval_set.json  queries.json  sampled_entries.json  sampled_entries.xlsx  test_batch.jsonl
data/raw2/: 2025-05.jsonl  2025-06.jsonl  2025-07.jsonl  2025-08.jsonl  2025-09.jsonl
data/raw2-multiproc/: 2025-09.jsonl
data/raw2-multiproc-8workers/: 2025-09.jsonl
data/raw2-no-options/: 2025-09.jsonl
data/raw3/: 2025-05.jsonl  2025-08.jsonl  2025-09.jsonl
docs/: ASYNC_WORKFLOW_UPDATES.md  GPS_PowerBI_Implementation_Summary.md  PowerBI_Dashboard_Structure.md  buffered_saving.md  comprehensive_powerbi_portfolio_dashboard.md  embeddings_visualization.md  index.html  optimized_status_pipeline.html  optimized_status_pipeline.md  performance_optimizations.html  powerbi_dashboard_structure.md  powerbi_implementation_guide.md  scraper_optimization.md  scraper_optimization_benchmark_analysis.html  style.css  unified_pipeline.md  workflow_buffering_enhancement.md
docs/eda/: category_analysis.html  citizen_engagement.html  executive_dashboard.html  index.html  (+5 more)
experiments/: embeddings_comparison.py
scripts/: __init__.py  build_vector_store.py  debug_encoding.py  debug_jsonl.py  debug_targeted.py  etl_preprocessing.py  monitor_resources.sh  preprocess_data.py  scrape_authority_response.py  scrape_data.py
streamlit_app/: app.py
tests/: test_makefile_bat_consistency.py
(+105 files in other folders)
