[project]
name = "jarokelo-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "leweex95",email = "csibi.levente14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "selenium (>=4.35.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "jarokelo_tracker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)"
]
