[project]
name = "jarokelo-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "leweex95",email = "csibi.levente14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "chromadb (>=1.1.0,<2.0.0)",
    "levisllmhub @ git+https://github.com/leweex95/levisLLMhub.git",
    "streamlit (>=1.49.1,<2.0.0)",
    "markdown (>=3.9,<4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "kaleido (>=1.1.0,<2.0.0)",
    "torch (>=2.8.0)",
    "beautifulsoup4 (>=4.14.0,<5.0.0)",
    "psutil (>=5.9.0,<6.0.0)",
    "textgenhub @ git+https://github.com/leweex95/textgenhub.git",
    "selenium (>=4.36.0,<5.0.0)",
]

[tool.poetry]
packages = [{include = "jarokelo_tracker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)"
]
